@@ -110,6 +110,21 @@ String nodeName(Node* node)
     return node->nodeName().lower();
 }
 
+size_t stringSize(StringImpl* string)
+{
+    // FIXME: support substrings
+    size_t size = string->length();
+    if (string->is8Bit()) {
+        if (string->has16BitShadow()) {
+            size += 2 * size;
+            if (string->hasTerminatingNullCharacter())
+                size += 2;
+        }
+    } else
+        size *= 2;
+    return size + sizeof(*string);
+}
+
 typedef HashSet<StringImpl*, PtrHash<StringImpl*> > StringImplIdentitySet;
 
 class CharacterDataStatistics {
@@ -128,7 +143,7 @@ public:
             return;
         m_domStringImplSet.add(dataImpl);
 
-        m_characterDataSize += dataImpl->sizeInBytes();
+        m_characterDataSize += stringSize(dataImpl);
     }
 
     bool contains(StringImpl* s) { return m_domStringImplSet.contains(s); }
@@ -273,7 +288,7 @@ public:
 
     virtual void visitJSExternalString(StringImpl* string)
     {
-        int size = string->sizeInBytes();
+        int size = stringSize(string);
         m_jsExternalStringSize += size;
         if (m_characterDataStatistics.contains(string))
             m_sharedStringSize += size;
@@ -337,7 +352,7 @@ private:
     virtual void visitJSExternalString(StringImpl* string)
     {
         if (m_visitedObjects.add(string).isNewEntry)
-            m_jsExternalStringSize += string->sizeInBytes();
+            m_jsExternalStringSize += stringSize(string);
     }
 
     VisitedObjects& m_visitedObjects;
@@ -491,7 +506,7 @@ private:
     {
         if (string.isNull() || visited(string.impl()))
             return;
-        countObjectSize(objectType, string.impl()->sizeInBytes());
+        countObjectSize(objectType, stringSize(string.impl()));
     }
 
     virtual void countObjectSize(ObjectType objectType, size_t size) OVERRIDE
