@@ -1,5 +1,13 @@
 2012-07-26  Yury Semikhatsky  <yurys@chromium.org>
 
+        Unreviewed. Revert r123740 as it breaks AppleMac compilation.
+
+        * WebCore.exp.in:
+        * inspector/InspectorMemoryAgent.cpp:
+        (WebCore):
+
+2012-07-26  Yury Semikhatsky  <yurys@chromium.org>
+
         Unreviewed. Fix AppleMac compilation after r123740.
 
         * WebCore.exp.in: Added missing symbol.
